<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ini_Investment"
            android:padding="12dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/InitialInvestment"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_gravity="center"
            android:padding="15dp"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Reg_pay"
            android:padding="15dp"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/RegularPaymentVal"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="number"
                android:padding="15dp"
                />

            <Spinner
                android:id="@+id/PaymentInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:entries="@array/Payment"
                android:padding="15dp"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AIR"
            android:padding="15dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/InterestRate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/YTG"
            android:padding="12dp"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/YearsTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/YT"
                android:padding="15dp"
                />



            <SeekBar
                android:id="@+id/Seekbar_years"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:max="60"
                android:padding="15dp"
                />



        </LinearLayout>

        <Button
            android:id="@+id/CalculateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:text="@string/CalculateBtn" />

        <TextView
            android:id="@+id/CIT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/CIStr"
            android:padding="15dp"
             />

    </LinearLayout>
</RelativeLayout>